[tool.poetry]
name = "steam-market-api-service"
version = "0.1.0"
description = "Steam market interface for the forecast selection model"
authors = ["Pedro Mendes <phrmendes@tuta.io>"]
readme = "README.md"
packages = [{include = "steam_market_api_service"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.2"
pandas = "^1.5.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
